# OASIS

./: .gitignore  .gitmodules  AGENTS.md  README.md  mypy.ini  requirements-tox.in  requirements-tox.txt  requirements-tox.txt.in  tox.ini
oasis_avr/: .gitignore  CMakeLists.txt  bootstrap.sh  package.xml
oasis_avr/config/: BoardOptions-template.cmake  BoardOptions-unowifi.cmake
oasis_avr/scripts/: detect_arduino.sh  get_arduino_platform.sh  reset_leonardo.py
oasis_avr/src/: arduino_shim.hpp
oasis_control/: package.xml  setup.cfg  setup.py
oasis_control/launch/: control_launch.py
oasis_control/test/: __init__.py  conftest.py  ros_test_stubs.py  test_ahrs_bootstrap.py  test_ahrs_conversions.py  test_ahrs_error_state_layout.py  test_ahrs_filter_gyro_update.py  test_ahrs_filter_stub.py  test_ahrs_inject_validation.py  test_ahrs_linalg.py  test_ahrs_predict.py  test_ahrs_quat.py  test_ahrs_speedometer.py  test_ahrs_speedometer_node.py  test_ahrs_tilt_node.py  test_ahrs_timeline.py  test_ahrs_update_accel.py  test_ahrs_update_core.py  test_ahrs_update_gyro.py  test_ahrs_update_mag.py  test_apriltag_reprojection.py  test_checkerboard_slowdown.py  test_control_descriptions.py  test_ekf_apriltag_pose.py  test_ekf_buffer.py  test_ekf_camera_info_policy.py  test_ekf_core.py  test_ekf_imu_coverage.py  test_ekf_imu_ingest.py  test_ekf_localizer_node_time.py  test_ekf_mag_covariance.py  test_ekf_odom_reset.py  test_ekf_replay.py  test_ekf_replay_order.py  test_ekf_time_conversion.py  test_ekf_time_policy.py  test_ekf_world_odom.py  test_ekf_world_odom_separation.py  test_ekf_yaw_wrap.py  test_forward_twist_estimator.py  (+11 more)
oasis_control/tests/: test_ekf_core.py
oasis_drivers_cpp/: CMakeLists.txt  package.xml
oasis_drivers_cpp/cmake/: FindCEC.cmake
oasis_drivers_cpp/doc/: ACS37800_HARDWARE_SMOKE_TEST.md
oasis_drivers_cpp/imu_info/: imu_mpu6050_calibration_falcon.yaml
oasis_drivers_cpp/launch/: v4l2_launch.py
oasis_drivers_cpp/src/: cec_server.cpp  files.txt  led_server.cpp  mpu6050_driver.cpp
oasis_drivers_py/: CMakeLists.txt  mypy.ini  package.xml  requirements.txt  setup.cfg  setup.py
oasis_drivers_py/launch/: __init__.pyi  drivers_launch.py  ups_launch.py
oasis_drivers_py/oasis_msgs/: __init__.pyi  msg.pyi  srv.pyi
oasis_drivers_py/scripts/: delay_launch.sh  wifi_connect.sh  wifi_disconnect.sh  wifi_list.sh
oasis_drivers_py/test/: conftest.py  test_air_quality_topics.py  test_hardware_config.py  test_power_meter_launch.py  test_telemetrix_air_quality_parse.py  test_ups_server_node.py  test_zupt_launch.py
oasis_hass/: package.xml  setup.cfg  setup.py
oasis_hass/config/: smarthome.yaml
oasis_hass/launch/: hass_launch.py
oasis_mcu/: CMakeLists.txt  bootstrap.sh  package.xml
oasis_mcu/scripts/: detect_arduino.sh  get_arduino_platform.sh  reset_leonardo.py
oasis_msgs/: CMakeLists.txt  package.xml
oasis_msgs/msg/: AVRConstants.msg  Accelerometer.msg  AhrsDiagnostics.msg  AhrsMount.msg  AhrsMountDiagnostics.msg  AhrsState.msg  AhrsStatus.msg  AirQuality.msg  AirQualityIndex.msg  AnalogButton.msg  AnalogReading.msg  AnalogReadings.msg  AnalogStick.msg  AprilTagDetectionReport.msg  AprilTagFrameReport.msg  AprilTagMap.msg  AprilTagMapEntry.msg  BoundingBox.msg  CPUFanSpeed.msg  CalibrationStatus.msg  CameraScene.msg  ConductorState.msg  DigitalButton.msg  DigitalReading.msg  DigitalWriteCommand.msg  DiskPartition.msg  EffectKind.msg  EffectMode.msg  EkfAprilTagDetectionReport.msg  EkfAprilTagUpdateReport.msg  EkfState.msg  EkfUpdateReport.msg  EngineState.msg  EngineerState.msg  GasConcentration.msg  HelipadMode.msg  I2CDevice.msg  I2CDeviceType.msg  I2CImu.msg  ImuCalibration.msg  (+37 more)
oasis_msgs/srv/: AnalogRead.srv  CaptureInput.srv  CheckIsWireless.srv  ConfigureEffect.srv  DigitalRead.srv  DigitalWrite.srv  EndScan.srv  GetMACAddress.srv  HelipadAttach.srv  I2CBegin.srv  I2CEnd.srv  PWMWrite.srv  PowerControl.srv  ReportMCUMemory.srv  ServoWrite.srv  SetAnalogMode.srv  SetDigitalMode.srv  SetDisplay.srv  SetDisplayContrast.srv  SetEffect.srv  SetHelipadMode.srv  SetPlug.srv  SetRGB.srv  SetSamplingInterval.srv  StartScan.srv  UPSCommand.srv  WoLCommand.srv
oasis_perception/: CMakeLists.txt  package.xml
oasis_perception/cmake/: FindDBoW2.cmake  Findbgslibrary.cmake
oasis_perception/config/: AdaptiveSelectiveBackgroundLearning.xml  SigmaDelta.xml
oasis_perception/launch/: perception_launch.py
oasis_perception/lib/: .gitignore
oasis_perception/src/: background_subtractor.cpp  background_subtractor_abl.cpp  background_subtractor_asbl.cpp  bgsnode.cpp  monocular_inertial_slam.cpp  monocular_slam.cpp  multi_modeler.cpp
oasis_perception_cpp/: CMakeLists.txt  package.xml
oasis_perception_cpp/cmake/: FindDBoW2.cmake  FindEigen3.cmake  FindMediaPipe.cmake  FindORB_SLAM3.cmake  FindORB_SLAM_OASIS.cmake  FindSophus.cmake  Findbgslibrary.cmake  Findg2o.cmake
oasis_perception_cpp/config/: AdaptiveBackgroundLearning.xml  AdaptiveSelectiveBackgroundLearning.xml  IMX708_Wide.yaml  KNN.xml  Webcam.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_1280x720_4608x2592_BGGR_PISP_COMP1_RAW.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_1920x1080_2304x1296_BGGR_PISP_COMP1_RAW.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_1920x1080_2304x1296_BGGR_PISP_COMP1_RAW_hd.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_1920x1080_2304x1296_BGGR_PISP_COMP1_RAW_hd720.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_1920x1080_2304x1296_BGGR_PISP_COMP1_RAW_qhd.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_1920x1080_2304x1296_BGGR_PISP_COMP1_RAW_sd.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_1920x1080_4608x2592_BGGR_PISP_COMP1_RAW.yaml  imx708_wide__base_axi_pcie_120000_rp1_i2c_80000_imx708_1a_640x360_4608x2592_BGGR_PISP_COMP1_RAW.yaml
oasis_perception_cpp/doc/: Machine vision references.txt
oasis_tooling/: CMakeLists.txt  package.xml
oasis_visualization/: .eslintrc.js  CMakeLists.txt  package.json  package.xml  pnpm-lock.yaml
(+1367 files in other folders)
